--- a/weather.html
+++ b/weather.html
@@ -11,9 +11,9 @@
 <body>
 
 <header>
-    <h1>Buck's Snow Report</h1>
+    <a href="index.html" class="title-link"><h1>Tectonic MVMT</h1></a>
     <nav class="navigation">
-        <a href='index.html'>Snow Report</a>
+        <a href='index.html'>Hiking Trails</a>
         <a href='weather.html'>Weather</a>
     </nav>
 </header>
@@ -22,8 +22,8 @@
     <div class="container">
         <h2>Weather</h2>
         <form id="js-weather-form">
-            <label for="js-zip">Zipcode</label>
-            <input type="number" name="zip" id="js-zip">
+            <label for="js-city">City, State</label>
+            <input type="text" name="city" id="js-city">
 
             <input type="submit" value="Go!">
         </form>
