--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,84 +8,142 @@
     <title>Tectonic MVMT</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="main.css">
-    
-</head>
-<body>
-<div class="background"></div>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" />
 
-<header>
-    <a href="index.html" class="title-link"><h1>Tectonic MVMT</h1></a>
-    <div id='weather-icon'></div>
-</header>
+</head>
+
+<body>
+    <div class="background"></div>
+
+    <header>
+        <a href="index.html" class="title-link">
+            <h1>Tectonic MVMT</h1>
+        </a>
+        <div id='weather-icon'></div>
+    </header>
 
     <div class="container">
-        
+
         <h2>Where do you want to go?</h2>
-        <div class="form"></div>
-        <form id="js-trail-form">
-            <label for="js-hike-city">City, State or Zipcode (ex. 'Boulder, CO' or '80301')</label>
-            <br>
-            <input type="text" name="hike-city" id="js-hike-city">
-            <br>
-            <h3>Personlize Your Results</h3>
-        <div class="filters">
-            <label for="num-results">Number of Trails</label>
-                <select name="num-results" id="num-results">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                </select>
-   
-            <label for="min-length">Minimum Length (in miles)</label>
-                <select name="min-length" id="min-length">
-                <option value="0">0 Miles</option>
-                <option value="2">2 Miles</option>
-                <option value="4">4 Miles</option>
-                <option value="6">6 Miles</option>
-                <option value="8">8 Miles</option>
-                <option value="10">10+ Miles</option>
-                </select>
+        <div class="form">
+            <form id="js-trail-form">
+                <label for="js-hike-city">City, State or Zipcode (ex. 'Boulder, CO' or '80301')</label>
+                <br>
+                <input type="text" name="hike-city" id="js-hike-city">
+                <br>
+                <h3>Personlize Your Results</h3>
+                <div class="filters">
+                    <label for="num-results">Number of Trails</label>
+                    <select name="num-results" id="num-results">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
 
-            <p>Sort by (quality by default):</p>
-            <input type="radio" id="quality" name="sort-trails" value="quality">
-            <label for="quality">Quality</label><br>
-            <input type="radio" id="distance" name="sort-trails" value="distance">
-            <label for="distance">Distance</label>
-            <br>
-        </div>
-            <input type="submit" id="hike-city" value="Let's Go!">
-        </form>
-        </div>  
+                    <label for="min-length">Minimum Length (in miles)</label>
+                    <select name="min-length" id="min-length">
+                        <option value="0">0 Miles</option>
+                        <option value="2">2 Miles</option>
+                        <option value="4">4 Miles</option>
+                        <option value="6">6 Miles</option>
+                        <option value="8">8 Miles</option>
+                        <option value="10">10+ Miles</option>
+                    </select>
 
-        <div class="weather-trails">
-            <div class="trails">
-        <h2>Hiking Trails</h2>
-        <p id="js-error-message" class="error-message"></p>
-        <section id="trail-results" class="hidden">
-          <h2>Search results</h2>
-          <ul id="trail-results-list">
-          </ul>
-        </section>
-        </div>
-
-        <div class="weather">
-        <h2>Weather</h2><br>
-        <p id="js-error-message" class="error-message"></p>
-        <section id="weather-results" class="hidden">
-        </section>
-        </div>
+                    <p>Sort by (quality by default):</p>
+                    <input type="radio" id="quality" name="sort-trails" value="quality">
+                    <label for="quality">Quality</label><br>
+                    <input type="radio" id="distance" name="sort-trails" value="distance">
+                    <label for="distance">Distance</label>
+                    <br>
+                </div>
+                <input type="submit" id="hike-city" value="Let's Go!">
+            </form>
         </div>
     </div>
 
+    <!--<div class="weather-trails">
+        <div class="trails">
+            <h2>Hiking Trails</h2>
+            <p id="js-error-message" class="error-message"></p>
+            <section id="trail-results" class='hidden'>
+                <h2>Search results</h2>
+                <ul id="trail-results-list">
+                </ul>
+            </section>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+        <div class="weather">
+            <h2>Weather</h2>
+            <p id="js-error-message" class="error-message"></p>
+            <section id="weather-results">
+            </section>
+        </div>
+    </div>-->
+    <div class="weather-trails">
+        <div class="trails">
+            <h2>Hiking Trails</h2>
+            <p id="js-error-message" class="error-message"></p>
+            <section id="trail-results" class="">
+                <h3>Top of Vail Tour</h3>
+                <p>Experience a super scenery and wildflower tour along Vail's high points.</p>
+                <p>Trail Rating: blue</p> <img src="https://cdn2.apstatic.com/photos/hike/7020088_small_1554837703.jpg">
+                <p>Elevation: 10318ft to 10992ft</p>
+                <a href="https://www.hikingproject.com/trail/7032591/top-of-vail-tour" target="_blank">More Info</a>
+                <a href="#map">Map it!</a>
+                <h3>Berrypicker</h3>
+                <p>This heart-pumping extravaganza of wildflowers &amp; views is popular workout for hikers &amp;
+                    runners</p>
+                <p>Trail Rating: blueBlack</p> <img
+                    src="https://cdn2.apstatic.com/photos/hike/7000187_small_1554158981.jpg">
+                <p>Elevation: 8121ft to 10302ft</p>
+                <a href="https://www.hikingproject.com/trail/7000047/berrypicker" target="_blank">More Info</a>
+                <a href="#map">Map it!</a>
+                <h3>Booth Creek Falls</h3>
+                <p>Deservedly one of the most popular trails in Vail, up to a waterfall and back.</p>
+                <p>Trail Rating: blue</p> <img src="https://cdn2.apstatic.com/photos/hike/7063562_small_1570240814.jpg">
+                <p>Elevation: 8449ft to 9751ft</p>
+                <a href="https://www.hikingproject.com/trail/7092958/booth-creek-falls" target="_blank">More Info</a>
+                <a href="#map">Map it!</a>
+            </section>
+        </div>
+
+        <div class="weather">
+            <h2>Weather</h2>
+            <p id="js-error-message" class="error-message"></p>
+            <section id="weather-results">
+                <h3>Vail, Colorado</h3>
+                <h4>Today:</h4>
+                <p>Current Condition: Sunny <img src="https://cdn.weatherapi.com/weather/64x64/day/113.png"> </p>
+                <p>Feels Like 22ºF</p>
+                <p>Wind Speed: 3.8mph</p>
+                <br>
+                <h4>Tomorrow:</h4>
+                <p>Condition: Patchy moderate snow
+                    <br>Low of 6.3ºF
+                    <br>High of 23.4ºF</p>
+                <br>
+                <p>Last updated at 2020-11-27 15:30</p>
+            </section>
+        </div>
+    </div>
+    </div>
+
+
+    <div id="map"></div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
+
 </html>
