map button registers click and has lat long array

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                 <p>Trail Rating: blue</p> <img src="https://cdn2.apstatic.com/photos/hike/7020088_small_1554837703.jpg">
                 <p>Elevation: 10318ft to 10992ft</p>
                 <a href="https://www.hikingproject.com/trail/7032591/top-of-vail-tour" target="_blank">More Info</a>
-                <a href="#map">Map it!</a>
+                <p>Coordinates: 39.6177, -106.3865</p>
+                <button type='button' id='map-button' val="39.6177, -106.3865">Map it!</button>
+
                 <h3>Berrypicker</h3>
                 <p>This heart-pumping extravaganza of wildflowers &amp; views is popular workout for hikers &amp;
                     runners</p>
@@ -106,12 +108,15 @@
                     src="https://cdn2.apstatic.com/photos/hike/7000187_small_1554158981.jpg">
                 <p>Elevation: 8121ft to 10302ft</p>
                 <a href="https://www.hikingproject.com/trail/7000047/berrypicker" target="_blank">More Info</a>
+                <p>Coordinates: 39.6426, -106.3884</p>
                 <a href="#map">Map it!</a>
+
                 <h3>Booth Creek Falls</h3>
                 <p>Deservedly one of the most popular trails in Vail, up to a waterfall and back.</p>
                 <p>Trail Rating: blue</p> <img src="https://cdn2.apstatic.com/photos/hike/7063562_small_1570240814.jpg">
                 <p>Elevation: 8449ft to 9751ft</p>
                 <a href="https://www.hikingproject.com/trail/7092958/booth-creek-falls" target="_blank">More Info</a>
+                <p>Coordinates: 39.6508, -106.3211</p>
                 <a href="#map">Map it!</a>
             </section>
         </div>
