coordinate buttons work

--- a/index.html
+++ b/index.html
@@ -70,30 +70,11 @@
         </div>
     </div>
 
-    <!--<div class="weather-trails">
-        <div class="trails">
-            <h2>Hiking Trails</h2>
-            <p id="js-error-message" class="error-message"></p>
-            <section id="trail-results" class='hidden'>
-                <h2>Search results</h2>
-                <ul id="trail-results-list">
-                </ul>
-            </section>
-        </div>
-
-        <div class="weather">
-            <h2>Weather</h2>
-            <p id="js-error-message" class="error-message"></p>
-            <section id="weather-results">
-            </section>
-        </div>
-    </div>-->
     <div class="weather-trails">
         <div class="trails">
             <h2>Hiking Trails</h2>
             <p id="js-error-message" class="error-message"></p>
-            <section id="trail-results" class="">
-        
+            <section id="trail-results" class="hidden">
             </section>
         </div>
 
