fully functional and style working as planned

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         </div>
     </div>
 
-    <div class="weather-trails">
+    <div class="weather-trails hidden">
         <div class="trails">
             <h2>Hiking Trails</h2>
             <p id="js-error-message" class="error-message"></p>
-            <section id="trail-results" class="hidden">
+            <section id="trail-results" >
             </section>
         </div>
 
