--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <div class="container">
 
-        <h2>Where do you want to go?</h2>
+        <h2>Wherever you are, just get moving!</h2>
+        <h4>Enter in a destination below, along with your preferred filters (if any) 
+            and see a list of hiking trails and local weather to plan your next adventure.</h4>
         <div class="form">
             <form id="js-trail-form">
                 <label for="js-hike-city">City, State or Zipcode (ex. 'Boulder, CO' or '80301')</label>
