--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tectonic MVMT</title>
+    <title>Hiking Trail API Practice</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="main.css">
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
@@ -18,7 +18,7 @@
 
     <header>
         <a href="index.html" class="title-link">
-            <h1>Tectonic MVMT</h1>
+            <h1>Hiking Trail Finder</h1>
         </a>
         <div id='weather-icon'></div>
     </header>
